# vulkan-tutorial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  compile_commands.json  config.h.in  main.cc  main.cpp  main.frag.glsl  main.vert.glsl  vertex.cc  vertex.hh  vulkan_app.cc  vulkan_app.hh  vulkan_utils.hh  window.cc  window.hh
lib/: CMakeLists.txt
resources/shaders/: vert.glsl
shaders/: shader.vert
src/: CMakeLists.txt  base.cpp  base.hpp  buffer.cpp  buffer.hpp  buffer_impl.hpp  device.cpp  device.hpp  drawable.cpp  frame.cpp  frame.hpp  graphics.cpp  graphics.hpp  graphics.rs  main.rs  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  surface_details.hpp  swapchain.cpp  swapchain.hpp  vertex.cpp  vertex.hpp
src/graphics/: context.rs  mod.rs  pipeline.rs
src/shaders/: CMakeLists.txt  shader.cmake  shader.frag  shader.h.in
